--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -343,9 +343,9 @@ jobs:
           fi
           
           if command -v iverilog &> /dev/null; then
-            echo "✅ Icarus Verilog ${{ env.ICARUS_VERSION }}: $(iverilog -V | head -1)"
+            echo "✅ Icarus Verilog: $(iverilog -V | head -1)"
           else
-            echo "❌ Icarus Verilog ${{ env.ICARUS_VERSION }} not found"
+            echo "❌ Icarus Verilog not found"
           fi
           
           if command -v ghdl &> /dev/null; then
@@ -358,11 +358,11 @@ jobs:
             echo "✅ Yosys: $(yosys -V | head -1)"
             # Check available modules
             echo "🔍 Checking Yosys modules..."
-            yosys -m help 2>/dev/null | grep -E "(slang|abc|fsm|memory|opt|techmap)" || echo "⚠️ Module check failed"
+            yosys -m help 2>/dev/null | grep -E "(abc|fsm|memory|opt|techmap)" || echo "ℹ️ Module check limited (some modules may not be available)"
             
             # Test Yosys SystemVerilog parsing capability (basic support)
             echo "🔍 Testing Yosys SystemVerilog support..."
-            echo 'module test(input logic clk, output logic [7:0] data); assign data = 8\'hAA; endmodule' > /tmp/test.sv
+            echo 'module test(input logic clk, output logic [7:0] data); assign data = 8'\''hAA; endmodule' > /tmp/test.sv
             yosys -p "read_verilog -sv /tmp/test.sv; stat" 2>/dev/null && echo "✅ Yosys SystemVerilog parsing successful" || echo "⚠️ Yosys SystemVerilog parsing test failed"
             
             # Note: Slang and Moosic support disabled due to package availability issues
@@ -372,9 +372,9 @@ jobs:
           fi
           
           if command -v abc &> /dev/null; then
-            echo "✅ Berkeley ABC ${{ env.ABC_VERSION }}: $(abc -v 2>/dev/null | head -1 || echo 'ABC available')"
+            echo "✅ Berkeley ABC: $(abc -v 2>/dev/null | head -1 || echo 'ABC available')"
           else
-            echo "⚠️ Berkeley ABC ${{ env.ABC_VERSION }} not found (optional for synthesis)"
+            echo "ℹ️ Berkeley ABC not found (optional for synthesis, not available in Ubuntu 24.04)"
           fi
           
           if command -v magic &> /dev/null; then
